refactor: init-schema and seed data